--- a/src/main/resources/bamboo-bumpversion.properties
+++ b/src/main/resources/bamboo-bumpversion.properties
@@ -1,18 +1,7 @@
 #put any key/value pairs here
-tools.redfox.bamboo.bumpversion.capability.type.system.bumpversion.error.undefinedExecutable=Invalid installation value
-tools.redfox.bamboo.bumpversion.capability.type.system.bumpversion.error.undefinedExecutableKind=Invalid type of the installation
-tools.redfox.bamboo.bumpversion.capability.type.system.bumpversion.executable.description=Path to bumpversion installation
-tools.redfox.bamboo.bumpversion.capability.type.system.bumpversion.executable.docker.description=Bumpversion docker image
-tools.redfox.bamboo.bumpversion.capability.type.system.bumpversion.executable.value=Location
-tools.redfox.bamboo.bumpversion.capability.type.system.bumpversion.execution.type=Execution type
-agent.capability.type.system.bumpversion.executable.type=local
-agent.capability.type.system.bumpversion.executable.docker.type=docker
-system.bumpversion.executable.docker=jesuspv/bumpversion
-system.bumpversion.executable=/usr/local/bin/bumpversion
-
-agent.capability.type.system.bumpversion.executable.title=bumpversion
-agent.capability.type.system.bumpversion.executable.description=bumpversion installation and execution mode
-agent.capability.type.system.bumpversion.executable.key.description=
-agent.capability.type.system.bumpversion.executable.key=Execution mode
-agent.capability.type.system.bumpversion.executable.value=Location
-agent.capability.type.system.bumpversion.executable.value.description=
+agent.capability.type.tools.redfox.bumpversion.executable.value=Location
+agent.capability.type.tools.redfox.bumpversion.executable.value.description=Installation path for bumpversion
+agent.capability.type.tools.redfox.bumpversion.executable.key=Name
+agent.capability.type.tools.redfox.bumpversion.executable.key.description=bumpversion tool capability settings
+agent.capability.type.tools.redfox.bumpversion.executable.title=bumpversion
+agent.capability.type.tools.redfox.bumpversion.executable.description=Path to bumpversion tool
